<resources>
    <string name="app_name">OOPSFinal</string>
    <string name="delivery_executive">Delivery Executive</string>
    <string name="register">REGISTER</string>
    <string name="customer">Customer</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full name</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_direction_API">AIzaSyCKl72nHzNmb9PrKLTOifjTdlsIeDsCdNM</string>

</resources>
