<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:background = "@color/background"
    android:padding = "30dp"
    tools:context=".SignUp">

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop = "10dp"
        android:textColorHint="@color/colorAccent"
        >

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop = "5dp"
        android:textColorHint="@color/colorAccent"
        >

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop = "10dp"
        android:textColorHint="@color/colorAccent"
        >

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop = "10dp"
        android:textColorHint="@color/colorAccent"
        app:passwordToggleEnabled="true"

        >

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:ems="5"
            android:inputType="textPassword"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop = "10dp"
        android:textColorHint="@color/colorAccent"
        app:passwordToggleEnabled="true"

        >

        <EditText
            android:id="@+id/txt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:ems="5"
            android:inputType="textPassword"
            android:textSize="20sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/foodieOrNot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "Select User Type"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text = "Customer"
            android:textSize = "20sp" >

        </RadioButton>


        <RadioButton
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "Delivery Executive"
            android:textSize = "20sp"
            />
    </RadioGroup>



    <RadioButton
        android:id="@+id/foodieRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text = "Check if subscription needed"
        android:textSize = "20sp" >

    </RadioButton>




    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text= "Get Current Location"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"
        android:textColor ="#ffffff"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:id="@+id/buttonlocSignIn"
        />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>